[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/circle.png" type="Texture" id=1]
[ext_resource path="res://scenes/Ball.gd" type="Script" id=2]
[ext_resource path="res://sounds/thump.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 100.0

[node name="Ball" type="RigidBody2D"]
input_pickable = true
mode = 1
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1.2, 1.2, 1.2, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Thump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_Ball_body_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_Ball_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Ball_mouse_exited"]
